style.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Source Sans Pro', Arial, Helvetica, sans-serif;
}

:root {
   
    --black: #000000;
    --white: #ffffff;
    --gray: #1C1D1F;
    --light-gray: #6A6F73;
    --gray86: #D1D7DC;
    --gray100: #F0F2F4;
    --gray-wild-sand: #F3F3F3;
    --gray-alto: #D9D9D9;
    --gray-silver: #B7B7B7;
    --gray-silver-chalice: #999999;
    --gray-mine-shaft: #434343;
    --purple: #A435F0;
    --teal: #72D8BA;
    --dark-teal: #199FA3;
    --yellow: #E9E729;
    --blue: #5022C3;
    --red: #F4522D;
    --teal-green-light: #6AC1D0;
    --teal-green-lighter: #C3E6EC;
    --indigo: #5624D0;
    --indigo200: #B7A9E5;

    font-size: 16px;
}
.page-container {
    /* outline: 1px solid red; */
    margin: 0 auto;
}

/* START HEADER SECTION */
header {
    border-bottom: 1px solid #B7B7B7;
    background: var(--white);
    width: 100%;
    height: 80px;
    position: fixed;
    z-index: 99;
}
.nav-container {
    max-width: 1200px;
    margin: 0 auto;
    /* outline: 1px solid blue; */
    padding: 0 30px;
    background: var(--white);
    position: relative;
}
nav {
    max-width: 1200px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 10px 10px;
    /* outline: 1px solid red;  */
    
}

#logo {
    width: 200px;
}

.menu ul {
    display: flex;
    /* margin: 0 250px 0 50px; */
    list-style: none;    
}
.menu ul li {
    padding: 20px;
    text-decoration: none;
}
.menu ul li a {
    color: #000000;
    text-decoration: none;
}

.menu ul li a:hover {
    color: #5022C3;
}

.login ul {
    display: flex;
    list-style: none;
    margin-right: 15px;
}

.login ul li {
    padding: 20px;
}
.login ul li a {
    color:#000000;
    text-decoration: none;
}
.login ul li a:hover {
    color: #5022C3;
}

.login ul li + li {
    background:#000000;
    color:#ffffff;
    font-weight: bold;
}

.login ul li + li:hover {
    background:#5022C3;
}

.login ul li + li a:hover{
    color:#ffffff;
}

.login ul li + li > a {
    color:#ffffff;
}


nav .mega-container {
    position: absolute;
    visibility: hidden;
}

nav li:hover .mega-container {
    position: absolute;
    visibility: visible;
}

nav .mega-container .mega-menu-content {
    background: var(--white);
    border: 1px solid #B7B7B7;
    display: flex;
    justify-content: space-between;
    padding: 20px;
    margin-top: 31px;
}

.mega-menu-content .mega-list {
    display: flex;
    flex-direction: column;
    margin-right: 50px;
}

.mega-menu-content .mega-list li {
    padding: 10px;
    font-size: 14px;
}

.mega-menu-content .mega-list li a {
    color: var(--gray);
}

.mega-menu-content .mega-list h4 {
    color: var(--light-gray);
    font-size: 14px;
    padding: 0 0 20px 10px;
}

nav .dropdown {
    background: var(--white);
    width: 250px;
    position: absolute;
    flex-direction: column;
    line-height: 14px;
    border: 1px solid #B7B7B7;
    margin-top: 31px;
    visibility: hidden;
    padding-bottom: 20px;
}

nav .dropdown li {
    padding: 10px 10px 10px 20px;
    font-size: 14px;
}

nav .dropdown li a {
    color: var(--gray);
}

nav li:hover .dropdown  {
    visibility: visible;
}

.login .dropdown li {
    background: var(--white);
}

.login .dropdown li a {
    color: var(--gray);
    font-weight: normal;
}

/* END HEADER SECTION */

.main-section {
    /* border: 1px solid red; */
    margin: 0 auto;
}

/* START HERO SECTION */

.hero-section {
    display: flex;
    justify-content: space-around;
    align-items: center;
    max-width: 1200px;
    margin: 0px auto;
    /* outline: 1px solid red; */
    padding: 150px 30px 70px 30px;
}

.hero-section .hero-text h1, h1 span {
    font-size: 48px;
    line-height: 56px;
    font-family: Georgia, 'Times New Roman', Times, serif;
    letter-spacing: 1px;
}

h1 span {
    color:#A435F0;
}
.hero-section .hero-text {
    width: 50%;
}

.hero-section .hero-text p{
    font-size: 19px;
    color: var(--gray);
    margin: 22px 0;
    width: 90%;
}

.hero-button {
    padding: 15px 10px;
    background: #000000;
    border:1px solid #000000;
    color: #ffffff;
    font-weight: bold;
    font-size: 16px;
}
.hero-button a {
    color: #ffffff;
    text-decoration: none;
}

.hero-button:hover {
    background:#5022C3;
    border:1px solid #5022C3;
}

.hero-section img {
    /* outline: 1px solid red; */
}

/* END HERO SECTION */

/* START REVIEWER SECTION */

.reviewer-container{
    background: #F0F2F4;
    height: 450px;
    justify-content: center;
}

.reviewer-section {
    max-width: 1200px;
    margin: 0 auto;
    text-align: center;
    padding-top: 50px;
}

.reviewer-section h2{
    padding-bottom: 15px;
    font-size: 32px;
    line-height: 42px;
    font-family: Georgia, 'Times New Roman', Times, serif;
}

.reviewer-section p {
    font-size: 19px;
    color: var(--gray);
}

.reviewer-badge{
    display: flex;
    justify-content: center;
}

.reviewer-badge img {
    width: 170px;
    padding: 50px 10px;
}
/* END REVIEWER SECTION */

/* START SOCIAL PROOF SECTION */

.social-proof-container {
    background: #434343;
    height: 300px;
    justify-content: center;
}

.social-proof-section {
    max-width: 1200px;
    margin: 0 auto;
    text-align: center;
    padding: 60px 0;
}

.social-proof-section h3 {
    font-size: 19px;
    line-height: 23px;
    font-weight: bold;
    color: #ffffff;
}

.customer-logo {
    margin: auto;
    /* outline: 1px solid red; */
    justify-content: center;
    
}

.customer-logo img {
    width: 100px;
    margin: 40px;
    vertical-align: middle;
}

/* END SOCIAL PROOF SECTION */

/* START UPSKILL SECTION */

.upskill-container {
    background: #ffffff;
    /* height: 300px; */
    justify-content: center;
}

.upskill-section {
    max-width: 1200px;
    margin: 0 auto;
    text-align: center;
    padding: 60px 0;
}
/* ... */

